crates/toml/tests/snapshots/invalid/table/append-with-dotted-keys-05.stderr
TOML parse error at line 2, column 1
  |
2 | a.b = 2
  | ^
duplicate key `b` in document root
